<resources>
    <string name="app_logo_description">Carpool App Logo</string>
    <string name="app_name">Clever Carpool</string>
    <string name="log_in_text">Log In</string>
    <string name="log_out_text">Log Out</string>
    <string name="user_is_driver">Driver</string>
    <string name="user_is_passenger">Passenger</string>
    <string name="rate_text">Rate Us</string>
    <string name="about_text">About</string>
    <string name="passenger_reg_text">Passenger Registration</string>
    <string name="driver_reg_text">Driver Registration</string>
    <string name="register_text">Register</string>
    <string name="next_text">Next</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="retype_password_hint">Retype Password</string>
    <string name="full_name_hint">Enter Full Name</string>
    <string name="age_warning">Note: You must be aged 18 or over to use this app.</string>
    <string name="dob_text">Date Of Birth</string>
    <string name="dob__title_text">Your date of birth is:</string>
    <string name="home_address_text">Home Address</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender</string>
    <string name="enter_text">Enter Here</string>
    <string name="enter_name_title">Please enter your name and gender below.</string>
    <string name="enter_birthday">Please enter your date of birth below.</string>
    <string name="enter_car_registration_text">Please enter your Irish car registration below and then click the button for validation purposes.</string>
    <string name="enter_car_registration_warn">Note that this car will be your vehicle for providing carpooling and you must only use this vehicle.</string>
    <string name="day_text">Day</string>
    <string name="month_text">Month</string>
    <string name="year_text">Year</string>
    <string name="car_registration_Text">Car Registration</string>
    <string name="driver_or_passenger_text">Are your registering as a Passenger\nor as a Driver?</string>
    <string name="car_scraper_text">Click the button below to retrieve car details.</string>
    <string name="car_scraper_button">Analyse</string>
    <string name="driver_license_text">Please take a clear picture of your license.</string>
    <string name="driver_license_string">Driver License</string>
    <string name="driver_license_warn_one">1. Please make sure your license is up-to-date and valid for use as a full driving license in the Republic of Ireland.</string>
    <string name="driver_license_warn_one_ext">Note that you are not allowed to drive on a learner permit.</string>
    <string name="driver_license_warn_two">2. If the picture is blurry, the card may not be analysed. In this case, take another picture.</string>
    <string name="driver_license_warn_three">3. If you do not have a valid license, you must register as a passenger only.</string>
    <string name="car_type">Car Type:\t</string>
    <string name="car_year">Year of Make:\t</string>
    <string name="car_color">Car Color:\t</string>
    <string name="car_engcc">Engine CC:\t</string>
    <string name="car_fuel">Fuel Type:\t</string>
    <string name="car_body">Car Body:\t</string>
    <string name="car_warn">If below describes your car then click next, otherwise\nclick try again and reenter your registration.</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer Not To Say</item>
    </string-array>
    <string-array name="sorting_posts">
        <item>Relevance (Default)</item>
        <item>Date</item>
    </string-array>
    <string name="address_text">Address</string>
    <string name="settings_text">Settings</string>
    <string name="street_address_text">House No. and Street</string>
    <string name="town_city_text">Town/Area</string>
    <string name="county_text">County</string>
    <string name="mobile_text">Mobile Number</string>
    <string name="enter_address_mob">Please enter your home address\nand mobile number below.</string>
    <string name="try_again">Try Again?</string>
    <string name="enter_email_pass">Please enter your email and a valid password.</string>
    <string name="email_text">Email</string>
    <string name="password_text">Please enter your email and a valid password.</string>
    <string name="password_warn">Passwords must be at least 8 characters long and\ncontain at least one capital letter and one number from (0&#8211;9).</string>
    <string name="complete_registration_text">Complete\nRegistration</string>
    <string name="take_picture_text">Take Picture</string>
    <string name="take_picture_description">Please take a picture of yourself\nusing the phone camera</string>
    <string name="driver_button">Become a driver</string>
    <string name="title_activity_home_navigation">HomeNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Carpool Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="home_profile">Home Profile</string>
    <string name="open_nev_bar">Navigation Bar Open</string>
    <string name="add_post_text">Add a Post</string>
    <string name="close_nav_bar">Navigation Bar Closed</string>
    <string name="rate_us_text">Watch this space!</string>
    <string name="about_us">About Us</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_dashboard">Dashboard</string>
    <string name="search_hint">Search for an address..</string>
    <string name="bottom_nav_forum">Forum</string>
    <string name="bottom_nav_usertrips">Trips</string>
    <string name="first_point"> This application is being developed as part of a final year project in Computer Applications at Dublin City University. The two developers are Shaun Carey and Nigel Guven.</string>
    <string name="second_point">Clever Carpooling is an application to be used by students and commuters to fill up available space in cars, thereby reducing traffic and contributing to a greener community.</string>
    <string name="repo_link">Git Repo: <a href="https://gitlab.computing.dcu.ie/guvenn2/2020-ca400-nguven-scarey"><u>Clever Carpooling</u></a></string>
    <string name="require_warn">Requires DCU School of Computing Credentials.</string>
    <string name="link_text">Link to project code can be found below.</string>
    <string name="log_out_warn">If you would like to log out please click the button below.</string>
    <string name="daily_active_users">Active Users: </string>
    <string name="current_posts">Active Posts: </string>
    <string name="satellite_text">Satellite</string>
    <string name="starting_text">1. Please select your starting point for the journey by tapping the map where your journey will begin.</string>
    <string name="finishing_text">2. Now select where your destination is by tapping the map.</string>
    <string name="go_text">3. Now click the \'GO\' button on the right.</string>
    <string name="go_button_text">Go</string>
    <string name="enter_date_time_text">Please enter the date and time of your departure.</string>
    <string name="enter_date_time_button">Date and Time</string>
    <string name="create_route_button">Create Route</string>
    <string name="date_text">Date:</string>
    <string name="time_text">Time:</string>
    <string name="user_semicolon">User:</string>
    <string name="email_semicolon">Email:</string>
    <string name="mobile_semicolon">Mobile:</string>
    <string name="driver_text">This person is offering a lift.</string>
    <string name="passenger_text">This person is looking for a lift.</string>
    <string name="owner_text">This is your post.</string>
    <string name="warn_distanceA">You are</string>
    <string name="warn_distanceB">out of the way.</string>
    <string name="warn_distance_own">You own this post. You may only view its details.</string>
    <string name="start_address_text">Origin:</string>
    <string name="end_address_text">Destination:</string>
    <string name="distance_text">Distance:</string>
    <string name="duration_text">Route Duration:</string>
    <string name="departure_date">Date of Departure:</string>
    <string name="departure_time">Time of Departure:</string>
    <string name="_create_route_warn">If your route is correct, please click the button below.</string>
    <string name="title_activity_map_select_route">Map</string>
    <string name="name_placeholder">Lorem Ipsum</string>
    <string name="date_place_holder">1st August 1970</string>
    <string name="post_details">Post Details</string>
    <string name="time_place_holder">08:00</string>
    <string name="source_placeholder">Birr, Offaly</string>
    <string name="dest_placeholder">Enniscorthy, Wexford</string>
    <string name="title_activity_post_details">Map</string>
    <string name="route_text">Route Information</string>
    <string name="accept_text">Accept</string>
    <string name="profile_text">Visit Profile</string>
    <string name="user_info_text">User Information</string>
    <string name="user_text">User:</string>
    <string name="message_text">Send a Message</string>
    <string name="forgot_password">Forgot Password? Click here.</string>
    <string name="service_registry_options">For which service would you like to register for?</string>
    <string name="forum_welcome_title">User Forum</string>
    <string name="cancel_text">Cancel</string>
    <string name="cancel_request_text">Cancel Chat Request</string>
    <string name="write_message_hint">Write a message here…</string>
    <string name="no_data">There are no posts available at the moment</string>
    <string name="connect_request">wants to connect with you.</string>
    <string name="json_path_error">It is not possible to get information based on your current location</string>
    <string name="date_created">Date Created:</string>
    <string name="group_user_count">Users:</string>
    <string name="group_post_count">Posts:</string>
    <string name="contact_text">Contact</string>
    <string name="receiver_messages_here">Receiver Messages Here</string>
    <string name="sender_messages_here">Sender Messages Here</string>
    <string name="display_username">Display Username</string>
    <string name="active_now">Active now</string>
    <string name="last_seen">Last Seen: </string>
    <string name="offline_user">Offline</string>
    <string name="upload_messages">Upload Messages</string>
    <string name="receiver_media">Receiver Media</string>
    <string name="sender_media">Sender Media</string>
    <string name="trips_title">Trip Information</string>
    <string name="no_active_posts">\nYou have no activity on the dashboard.</string>
    <string name="embarrassing_empty_dash">\nThats embarrassing, there are no active posts!</string>
    <string name="your_trips_title">Your Trips</string>
    <string name="your_next_trip_title">Your Next Trip</string>
    <string name="your_time_text">Your total time on the road:\u0020</string>
    <string name="your_distance_text">The total distance you will travel:\u0020</string>
    <string name="necessary_driver_selected">You need a driver to add you to a route.</string>
    <string name="carpoolers_title">Carpoolers</string>
    <string name="driver_of_route">Driver:</string>
    <string name="number_one">1.</string>
    <string name="number_two">2.</string>
    <string name="number_three">3.</string>
    <string name="number_four">4.</string>
    <string name="add_driver_button_text">Add</string>
    <string name="remove_driver_button_text">Remove</string>
    <string name="seat_unoccupied_warning">Seat Unoccupied</string>
    <string name="leave_button_text">Leave</string>
</resources>