<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverLicenseActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/button6"
        android:layout_width="86dp"
        android:layout_height="49dp"
        android:layout_marginBottom="24dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/next_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="122dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/take_picture_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/driver_license_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/driver_license_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="262dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/driver_license_warn_one"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="252dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/driver_license_warn_one_ext"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="298dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/driver_license_warn_two"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="256dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/driver_license_warn_three"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

</androidx.constraintlayout.widget.ConstraintLayout>